--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -34,6 +34,8 @@
 
             <th scope="col">Quantity</th>
 
+            <th scope="col">Actions</th>
+
         </tr>
 
         </thead>
@@ -45,6 +47,10 @@
             <td th:text="${product.productName}"></td>
 
             <td th:text="${product.productQuantity}"></td>
+            <td>
+                <a th:href="@{'/product/edit/' + ${product.productId}}"
+                   class="btn btn-info btn-sm">Edit</a> <!-- Edit button -->
+            </td>
 
         </tr>
 
