--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -34,6 +34,8 @@
 
             <th scope="col">Quantity</th>
 
+            <th scope="col">Actions</th> <!-- New column for actions -->
+
         </tr>
 
         </thead>
@@ -45,6 +47,11 @@
             <td th:text="${product.productName}"></td>
 
             <td th:text="${product.productQuantity}"></td>
+
+            <td>
+                <a th:href="@{'/product/delete/' + ${product.productId}}"
+                   class="btn btn-danger btn-sm">Delete</a> <!-- Edit button -->
+            </td>
 
         </tr>
 
