--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -25,6 +25,7 @@
 
 
     <table border="1" class="table table-striped table-responsive-md">
+        <caption>Product Table</caption>
 
         <thead>
 
